force-app/main/default/objects/ampi__Disaggregated_Project_Indicator__c/ampi__Disaggregated_Project_Indicator__c.object-meta.xml
<CustomObject>
    <description>Disaggregation group for a project indicator</description>
    <label>Disaggregated Project Indicator</label>
    <nameField>
        <displayFormat>PID-{0000}</displayFormat>
        <label>Project Indicator Disaggregation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disaggregated Project Indicators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>