force-app/main/default/objects/ampi__Disaggregated_Project_Indicator__c/fields/ampi__Disaggregate_Results__c.field-meta.xml
<CustomField>
    <fullName>ampi__Disaggregate_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether to disaggerate results for this Project Indicator. The value in this field affects the display of the Project Indicator on AddResults.</description>
    <label>Disaggregate Results</label>
    <type>Checkbox</type>
</CustomField>