force-app/main/default/objects/ampi__Disaggregated_Project_Indicator__c/fields/ampi__Disaggregate_Targets__c.field-meta.xml
<CustomField>
    <fullName>ampi__Disaggregate_Targets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether to disaggerate targets for this Project Indicator. The value in this field affects the display of the Project Indicator on SetTargets.</description>
    <label>Disaggregate Targets</label>
    <type>Checkbox</type>
</CustomField>