force-app/main/default/objects/ampi__Disaggregated_Project_Indicator__c/fields/ampi__Project_Indicator__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project_Indicator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect this junction object to a Project Indicator.</description>
    <label>Project Indicator</label>
    <referenceTo>ampi__Project_Indicator__c</referenceTo>
    <relationshipLabel>Disaggregated Project Indicators</relationshipLabel>
    <relationshipName>Disaggregated_Project_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>